--- a/FrontEndTest/package.json
+++ b/FrontEndTest/package.json
@@ -5,10 +5,12 @@
   "version": "0.1.0",
   "author": "",
   "dependencies": {
+    "axios": "^0.19.0",
     "gatsby": "^2.17.6",
     "gatsby-image": "^2.2.30",
     "gatsby-plugin-manifest": "^2.2.25",
     "gatsby-plugin-offline": "^3.0.17",
+    "gatsby-source-graphql": "^2.1.21",
     "prop-types": "^15.7.2",
     "react": "^16.11.0",
     "react-dom": "^16.11.0"
