--- a/FrontEndTest/package.json
+++ b/FrontEndTest/package.json
@@ -10,13 +10,15 @@
     "gatsby-image": "^2.2.30",
     "gatsby-plugin-manifest": "^2.2.25",
     "gatsby-plugin-offline": "^3.0.17",
+    "gatsby-plugin-sass": "^2.1.20",
     "gatsby-plugin-sharp": "^2.2.36",
-    "gatsby-source-custom-api": "^2.1.2",
     "gatsby-transformer-sharp": "^2.3.2",
+    "node-sass": "^4.13.0",
     "prop-types": "^15.7.2",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
-    "react-virtualized": "^9.21.1"
+    "react-tiny-virtual-list": "^2.2.0",
+    "react-ui-cards": "^2.0.0"
   },
   "devDependencies": {
     "prettier": "^1.18.2"
