--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-tiny-virtual-list": "^2.2.0",
-    "react-ui-cards": "^2.0.0"
+    "react-ui-cards": "^2.0.0",
+    "react-virtualized": "^9.21.1"
   },
   "devDependencies": {
     "prettier": "^1.18.2"
