--- a/package.json
+++ b/package.json
@@ -7,19 +7,19 @@
   "dependencies": {
     "axios": "^0.19.0",
     "gatsby": "^2.17.6",
-    "gatsby-image": "^2.2.30",
     "gatsby-plugin-manifest": "^2.2.25",
     "gatsby-plugin-offline": "^3.0.17",
     "gatsby-plugin-sass": "^2.1.20",
-    "gatsby-plugin-sharp": "^2.2.36",
-    "gatsby-transformer-sharp": "^2.3.2",
+    "gatsby-plugin-sharp": "^2.2.38",
+    "gatsby-remark-images": "^3.1.30",
+    "gatsby-remark-lazy-load": "^1.0.2",
+    "gatsby-transformer-remark": "^2.6.34",
+    "gatsby-transformer-sharp": "^2.3.4",
     "node-sass": "^4.13.0",
     "prop-types": "^15.7.2",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
-    "react-tiny-virtual-list": "^2.2.0",
-    "react-ui-cards": "^2.0.0",
-    "react-virtualized": "^9.21.1"
+    "react-tiny-virtual-list": "^2.2.0"
   },
   "devDependencies": {
     "prettier": "^1.18.2"
